fix errors of dark mode

--- a/app/sass/helpers/_classes.scss
+++ b/app/sass/helpers/_classes.scss
@@ -4,12 +4,18 @@
 .white_color {
     color: white !important;
 }
+.white_bgColor_body {
+    background-color: white;
+}
 .dark_color {
     color: black !important;
 }
 
+.dark_bgColor_body {
+    background-color: #000000;
+}
 .dark_bgColor {
-    background-color: #272727;
+    background-color: #232323;
 }
 .white_bgColor {
     background-color: white;
